src/main/java/com/example/linkingrest/error/exception/PostNotFoundException.java
package com.example.linkingrest.error.exception;

public class PostNotFoundException extends RuntimeException {
    public PostNotFoundException(){
        super();
    }

}
